# MonkeDAO

./: .npmrc  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.docker/: docker-compose.local.yml  docker-compose.mysql.local.yml
apps/contracts/: Anchor.toml  package.json
apps/contracts/migrations/: deploy.ts
apps/contracts/programs/contracts/: Cargo.toml
apps/contracts/programs/contracts/src/: lib.rs
apps/contracts/programs/contracts/src/error/: collections_error.rs  deal_token_error.rs  mod.rs  staking_error.rs
apps/contracts/programs/contracts/src/instructions/: check_redemption.rs  create_collections.rs  deal_token.rs  mint_collections.rs  mod.rs  redeem_nft.rs  staking.rs
apps/contracts/tests/: deal_token.ts
apps/docs/: eslint.config.mjs  package.json  tsconfig.json
apps/docs/content/: techstack.md
apps/graphql-api/: .env.example  .prettierrc.mjs  Dockerfile  README.md  eslint.config.mjs  package.json  setup-jest.mjs  tsconfig.json
apps/graphql-api/src/: app.module.ts  app.resolver.ts  main.ts  schema.gql
apps/realworld-graphql/: package.json
apps/realworld-graphql/src/: app.module.ts  main.ts  schema.gql
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ActionIcons.tsx  Analytics.tsx  (+19 more)
tools/test/: README.md  realworld-api-old.postman_collection.json  realworld-api.postman_collection.json  realworld-graphql.postman_collection.json  run-api-tests.sh  run-graphql-tests.sh
(+142 files in other folders)
